# vocodeck2

./: .gitignore  BUILD-CONSOLE.md  BUILD-PROD.md  BUILD-WORKBENCH.md  BUILD.md  CONTEXT.md  DESIGN-DECK.md  DESIGN-DECK.mockup.html  HANDOFF.md  IMPROVEMENTS.md  PROTOCOL.md  README.md  SPEC-VISUAL-SKILLS.md  SPEC-WORKBENCH.md  SPEC.md  package-lock.json  package.json  playwright.config.mjs  pyproject.toml
.github/workflows/: ci.yml
.serena/: project.yml
adr/: 0003-mic-follows-selection.md
clients/voco_cli/: doctor.py  lifecycle.py  main.py
clients/voco_mcp/: main.py
configs/: cpu.toml  mac-m1.toml  windows-3090.toml
design/: a-bridge.html  b-paper.html  c-signal.html  index.html  index2.html  index3.html  index4.html  index5.html  index6.html  index7.html
docs/: AGENT-INTEGRATION.md  BACKLOG.md  DOGFOOD.md  POST-AUDIT-REMEDIATION-HANDOFF.md  status.json
docs/adr/: 0001-workspace-first-rail.md  0002-distribution-strategy.md
scripts/: gen_protocol.py  gen_status.py  install_single_wheel.py  mate_calibrate.py  mate_stream_smoke.py  providers_smoke.py  roundtrip_smoke.py  seed_demo.py
src/voco/: assets.py  config.py  daemon.py  logsetup.py  tts_floor.py  voice_loop.py  watcher.py
src/voco/adapters/: diffsource.py  first_mate.py  floor_supervisor.py  ghlink.py  gitstatus.py  hotkey.py  manifest.py  microphone.py  ptyterm.py  silero.py  speaker.py  state_store.py  stt.py  terminal.py  tmux.py  tts.py  wake.py  worktree.py
tests/: fakes.py  test_arbitration.py  test_assets.py  test_attention_tmux.py  test_audio_logic.py  test_bridge.py  test_config.py  test_config_hot_apply.py  test_daemon_control.py  test_diff.py  test_doctor.py  test_echo.py  test_findings.py  test_first_mate.py  test_floor_supervisor.py  test_hotkey.py  test_inject_live.py  test_input_meta.py  test_interdiff.py  test_late_mate.py  test_lifecycle.py  test_logsetup.py  test_manifest.py  test_mate_streaming.py  test_microphone.py  test_pane_state.py  test_phrases_registry_router.py  test_ptyterm.py  test_review_cli.py  test_review_wake.py  test_speaker.py  test_state.py  test_term_ws.py  test_turn.py  test_u0_protocol.py  test_u2_link.py  test_voice_loop.py  test_watcher.py  test_workbench_http.py  test_workspace.py  (+1 more)
tests_browser/: workbench.spec.mjs
tests_js/: bus.test.mjs  store.test.mjs
tests_release/: mcp_wheel_smoke.py  voice_extras_smoke.py
(+50 files in other folders)
