[project]
name = "voco"
version = "0.0.1"
description = "voco — local-first voice control plane for coding agents (VocoDeck 2 foundation)"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "numpy>=1.26",
    "sounddevice>=0.4.6",
    "onnxruntime>=1.17",
]

[project.optional-dependencies]
stt = ["faster-whisper>=1.0"]
ptt = ["pynput>=1.7"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
voco-d = "voco.daemon:main"
voco-cli = "voco_cli.main:main"
voco = "voco_cli.main:main"
voco-mcp = "voco_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voco", "clients/voco_cli", "clients/voco_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv]
package = true
