[project]
name = "voco"
version = "0.0.1"
description = "voco — local-first voice control plane for coding agents (VocoDeck 2 foundation)"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "numpy>=1.26",
    "sounddevice>=0.4.6",
    "onnxruntime>=1.17",
]

[project.optional-dependencies]
stt = ["faster-whisper>=1.0"]
ptt = ["pynput>=1.7"]
mcp = ["mcp>=1.0"]
floor = ["kokoro-onnx>=0.4"]
wake = ["openwakeword>=0.6"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
voco-d = "voco.daemon:main"
voco-cli = "voco_cli.main:main"
voco = "voco_cli.main:main"
voco-mcp = "voco_mcp.main:main"
voco-tts-floor = "voco.tts_floor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voco", "clients/voco_cli", "clients/voco_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv]
package = true

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "clients", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["SIM105", "SIM108", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src:clients"
packages = ["voco"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
